--- a/style.scss
+++ b/style.scss
@@ -30,3 +30,10 @@
     padding: 50px;
     border-radius: 25px;
 }
+.imgCard{
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    padding: 1%;
+    margin: auto;
+}
