--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,14 @@
 @import "./node_modules/bootstrap/scss/bootstrap.scss";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css");
-
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Spartan&display=swap');
+.text-spartan{
+    font-family: 'Spartan', sans-serif;
+}
+.logo{
+    font-family: 'Courgette', cursive;
+}
 .banner-image{
     background-image: url("/img/playa.jpg");
     background-image: cover;
@@ -9,26 +17,13 @@
     background-image: url("/img/playa2.jpg");
     background-image: cover;
 }
-.banner-image-login{
+.img-login{
     background-image: url("/img/playa-login.jpg");
     background-image: cover;
 }
-.banner-image-Registro{
+.img-registro{
     background-image: url("/img/playa-registro.jpg");
     background-image: cover;
-}
-.login{
-    background: black;
-    opacity: 0.7;
-    padding: 50px;
-    border-radius: 25px;
-    
-}
-.registro{
-    background: black;
-    opacity: 0.6;
-    padding: 50px;
-    border-radius: 25px;
 }
 .imgCard{
     width: 250px;
@@ -36,4 +31,5 @@
     object-fit: cover;
     padding: 1%;
     margin: auto;
+    
 }
