--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css");
+@import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css");
+@import url("https://fonts.googleapis.com/css2?family=Spartan&display=swap");
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -11958,6 +11961,14 @@ fieldset:disabled .btn {
   }
 }
 
+.text-spartan {
+  font-family: 'Spartan', sans-serif;
+}
+
+.logo {
+  font-family: 'Courgette', cursive;
+}
+
 .banner-image {
   background-image: url("/img/playa.jpg");
   background-image: cover;
@@ -11968,28 +11979,14 @@ fieldset:disabled .btn {
   background-image: cover;
 }
 
-.banner-image-login {
+.img-login {
   background-image: url("/img/playa-login.jpg");
   background-image: cover;
 }
 
-.banner-image-Registro {
+.img-registro {
   background-image: url("/img/playa-registro.jpg");
   background-image: cover;
-}
-
-.login {
-  background: black;
-  opacity: 0.7;
-  padding: 50px;
-  border-radius: 25px;
-}
-
-.registro {
-  background: black;
-  opacity: 0.6;
-  padding: 50px;
-  border-radius: 25px;
 }
 
 .imgCard {
